--- a/style.css
+++ b/style.css
@@ -77,8 +77,7 @@ html,body{height:100%;margin:0;font-family: ui-monospace, SFMono-Regular, Menlo,
 
 }
 
-.card{
-    position: relative;
+.card{    
     width: 480px;
     background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
     border:1px solid var(--border);
@@ -90,6 +89,7 @@ html,body{height:100%;margin:0;font-family: ui-monospace, SFMono-Regular, Menlo,
     gap:8px;
 
 }
+
 
 .card h4{margin:0;font-size:13px}
 .card .list{
@@ -104,6 +104,12 @@ html,body{height:100%;margin:0;font-family: ui-monospace, SFMono-Regular, Menlo,
     overflow-x: hidden;
 }
 
+.card-head{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    height: 22px;
+}
+
 ul {list-style:none;margin:0;padding:0;display:flex;flex-direction:column;gap:6px}
 
 .tag{display:inline-block;padding:3px 6px;border-radius:999px;font-size:11px;font-weight:700}
@@ -112,16 +118,21 @@ ul {list-style:none;margin:0;padding:0;display:flex;flex-direction:column;gap:6p
 .tag.static{background: rgba(248, 113, 113, 0.06);color: #f87171;;border:1px solid rgba(125,211,252,0.05)}
 
 .copy-button{
-    position: absolute;
-    padding:6px 9px;
+    width: 50px;
+    place-self: end;
+
+    height: 22px;
+    margin-top: auto;
+    margin-bottom: auto;
+    
     border:none;
     border-radius:5px;
     cursor:pointer;
-    font-weight:700;
+    font-weight:600;
 
-    right: 4px;
-    top: 4px;
-
+    text-align: center;
+    place-content: center;
+    
     display: none;
 }
 
@@ -158,8 +169,59 @@ ul {list-style:none;margin:0;padding:0;display:flex;flex-direction:column;gap:6p
 }
 
 .copy-button:hover{
-    transform: translateY(-1px);
+    transform: translateY(-2px);
 }
+
+.notification{
+    text-align: center;
+    place-content: center;
+
+    width: 70px;
+    padding: 3px;
+
+    border: none;
+    border-radius: 5px;
+    margin-left: auto;
+    margin-right: auto;
+
+    --move: 4px;
+    --transition-ms: 250ms;
+
+    visibility: hidden;
+    opacity: 0;
+    transform: translateY(calc(-1 * var(--move)));
+    transition: transform var(--transition-ms) ease, opacity var(--transition-ms) ease;
+    will-change: transform, opacity;
+}
+
+.notification.show{
+    visibility: visible;
+    opacity: 1;
+    transform: translateY(0);
+}
+
+
+.notification.param{
+    background:rgba(34,197,94,0.12);
+    color:var(--accent)
+}
+
+.notification.js{
+    background:rgba(96,165,250,0.06);color:#7dd3fc;
+}
+
+.notification.links{
+    background: rgba(248, 113, 113, 0.06);
+    color: #f87171;
+}
+
+.notification h4{
+    margin:0;
+    font-size:14px
+}
+
+
+
 /* footer actions */
 footer.actionbar{
     display:flex;
